Wed Feb  3 02:33:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_prepare_enc): use already compiled US-ASCII regexp
	  if given string is ASCII only.
	  121.2s to 113.9s on my x86_64-freebsd10.2 Intel Core i5 661

Tue Feb  2 13:02:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c: Introduce RREGEXP_PTR.
	  patch by dbussink.
	  partially merge https://github.com/ruby/ruby/pull/497

	* include/ruby/ruby.h: ditto.

	* gc.c: ditto.

	* ext/strscan/strscan.c: ditto.

	* parse.y: ditto.

	* string.c: ditto.

Tue Feb  2 09:08:27 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems/specification.rb: `coding` is effective only first
	  line except shebang.

	* lib/rubygems/package.rb, lib/rubygems/package/*: ditto.

Mon Feb  1 21:41:58 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.5.2.
	  It supports to enable frozen string literal and add `--norc` option for
	  disable to `.gemrc` configuration.
	  See 2.5.2 release notes for other fixes and enhancements.
	  https://github.com/rubygems/rubygems/blob/a8aa3bac723f045c52471c7b9328310a048561e0/History.txt#L3

Sun Jan 31 12:33:13 2016  Dan Kreiger  <dan@dankreiger.com>

	* test/drb/ut_large.rb (multiply, avg, median): add additional
	  math operations to DRbLarge.  [Fix GH-1086]

Sun Jan 31 12:19:15 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_file_exhaustive.rb (test_lstat): Add lacking test
	  for File#lstat.  [Fix GH-1231]

Sun Jan 31 12:15:33 2016  Prayag Verma  <prayag.verma@gmail.com>

	* doc/standard_library.rdoc: fix typo  [Fix GH-1230]
	  Spelling mistakes -
	  outputing > outputting
	  publich > publish

Sat Jan 30 15:18:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall_with_hook): also should call the
	  given hook before returning Qundef when overridden respond_to?
	  method returned false.  [ruby-core:73556] [Bug #12030]
